src/components/MovieCard.css
/* MovieCard.css */
.movie-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid #ccc;
  padding: 15px;
  margin: 10px;
  cursor: pointer;
  transition: transform 0.2s;
  background: linear-gradient(to bottom, yellow, blue);
  border-radius: 25px;
}

.movie-card:hover {
  transform: scale(1.05);
}

.movie-card img {
  max-width: 100%;
  height: auto;
  margin-bottom: 10px;
  border-radius: 25px;
}

.movie-details {
  text-align: center;
}

.movie-title {
  font-size: 1.2rem;
  margin: 5px 0;
  color: #fff;
}

.movie-genre,
.movie-year {
  font-size: 0.9rem;
  color: #dedada;
}

.movie-actions {
  margin-top: 10px;
}

.movie-actions button {
  padding: 5px 10px;
  background-color: #007bff;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.movie-actions button:hover {
  background-color: #0056b3;
  cursor: pointer;
}

.movie-actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-top: 10px;
}

